k8/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: fonixweb
spec:
  selector:
    app: web-app
  ports:
    - name: http
      port: 80
      targetPort: 80
