k8/nginx-ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fonix-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: fonix.blog.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
